--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         else {
             buttonElement.innerHTML = 'Subscribe';}
     " class="js-subscribe-button">Subscribe</button>
-
+    <!--just to add notes-->
     <script>
 
 
